--- a/landing.html
+++ b/landing.html
@@ -297,7 +297,10 @@ section.features {
         Platform WebGIS untuk analisis, monitoring, dan visualisasi data
         geografis secara real-time dengan tampilan modern.
       </p>
-      <a href="index.html" class="btn-map">
+      <a href="index.html#15/-7.9651/112.6397" class="btn-map">
+  Jelajahi Peta
+</a>
+
   Jelajahi Peta
 </a>
 
@@ -353,3 +356,4 @@ section.features {
   </footer>
 </body>
 </html>
+
